Blender 2.8 relatively BigBug #56654

Closed
opened 2018-09-02 01:17:21 +02:00 by Thomas DION · 6 comments

System Information
W10 64bit, GTX Titan 6GB + 1080 (display)

Blender Version
Broken: All the 2.80 since middle of August I think

Short description of error
Error 1 : Cycles Freestyle rendering issue : When I enable freestyle and remove the lineset, the whole view layer panel disappear
Error 2 : Cycles Rendering has no composite output on a file I'm working on (it's just blank)
I'm not sure if Error 2 is related to freestyle bug, or from when I enabled simplify / camera culling / distance culling, or from somewhere else
EDIT : it seems that removing some objects brings back the render but still with many issues

Exact steps for others to reproduce the error
Error 1 : any file works
Error 2 : blend file attached{F4511778}

**System Information** W10 64bit, GTX Titan 6GB + 1080 (display) **Blender Version** Broken: All the 2.80 since middle of August I think **Short description of error** Error 1 : Cycles Freestyle rendering issue : When I enable freestyle and remove the lineset, the whole view layer panel disappear Error 2 : Cycles Rendering has no composite output on a file I'm working on (it's just blank) I'm not sure if Error 2 is related to freestyle bug, or from when I enabled simplify / camera culling / distance culling, or from somewhere else EDIT : it seems that removing some objects brings back the render but still with many issues **Exact steps for others to reproduce the error** Error 1 : any file works Error 2 : blend file attached{[F4511778](https://archive.blender.org/developer/F4511778/v04-2.8.blend)}
Author

Added subscriber: @ThomasDION

Added subscriber: @ThomasDION

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

Sorry !

Still working on finding what is exactly the error number 2, and steps to reproduce it. I think it might have been solved already, and was related to a grease pencil object from an older version of 2.8.
I'll update/create a new bug report if I found something interesting !

Best Regards,
Thomas

Sorry ! Still working on finding what is exactly the error number 2, and steps to reproduce it. I think it might have been solved already, and was related to a grease pencil object from an older version of 2.8. I'll update/create a new bug report if I found something interesting ! Best Regards, Thomas

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2018-09-10 15:45:02 +02:00

OKI, considering bug as solved then, thanks.

OKI, considering bug as solved then, thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56654
No description provided.