Fix part of T56654: Freestyle hiding viewlayer buttons when there is no lineset.

Buttons' context 'path' has to bee handled carefully, especially when
building more than one step in a single call...